[FIX]Production Order:Display explicit warning message when put in packs without selecting packaging

--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-10 11:58+0000\n"
-"PO-Revision-Date: 2024-02-10 11:58+0000\n"
+"POT-Creation-Date: 2024-02-10 14:58+0000\n"
+"PO-Revision-Date: 2024-02-10 14:58+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,9 +18,18 @@ msgstr ""
 #. module: mrp_production_packs_according_packaging
 #: code:addons/mrp_production_packs_according_packaging/models/mrp_production.py:0
 #, python-format
-msgid "Please add 'Done' quantities to the manufacturing order finished Product to create packs."
+msgid "No packaging has been detected!"
+msgstr "Conditionnement obligatoire pour faire des colis!"
+
+#. module: mrp_production_packs_according_packaging
+#: code:addons/mrp_production_packs_according_packaging/models/mrp_production.py:0
+#, python-format
+msgid ""
+"Please add 'Done' quantities to the manufacturing order finished Product to "
+"create packs."
 msgstr ""
-"Veuillez ajouter les quantités 'Fait' aux mouvements de produits pour créer des colis "
+"Veuillez ajouter les quantités 'Fait' aux mouvements de produits pour créer "
+"des colis "
 
 #. module: mrp_production_packs_according_packaging
 #: model:ir.model,name:mrp_production_packs_according_packaging.model_mrp_production
