--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-10 14:58+0000\n"
-"PO-Revision-Date: 2024-02-10 14:58+0000\n"
+"POT-Creation-Date: 2024-02-10 17:08+0000\n"
+"PO-Revision-Date: 2024-02-10 17:08+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,10 +16,25 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: mrp_production_packs_according_packaging
+#: model:ir.model.fields,help:mrp_production_packs_according_packaging.field_mrp_production__has_packages
+msgid "Check the existence of destination packages on move lines"
+msgstr ""
+
+#. module: mrp_production_packs_according_packaging
+#: model:ir.model.fields,field_description:mrp_production_packs_according_packaging.field_mrp_production__has_packages
+msgid "Has Packages"
+msgstr ""
+
+#. module: mrp_production_packs_according_packaging
 #: code:addons/mrp_production_packs_according_packaging/models/mrp_production.py:0
 #, python-format
 msgid "No packaging has been detected!"
 msgstr "Conditionnement obligatoire pour faire des colis!"
+
+#. module: mrp_production_packs_according_packaging
+#: model_terms:ir.ui.view,arch_db:mrp_production_packs_according_packaging.mrp_production_form_view_inherited
+msgid "Packages"
+msgstr "Colis"
 
 #. module: mrp_production_packs_according_packaging
 #: code:addons/mrp_production_packs_according_packaging/models/mrp_production.py:0
